--- a/assets/css-scss/_globals.scss
+++ b/assets/css-scss/_globals.scss
@@ -51,7 +51,7 @@ body{
     }
     
     &-col2{
-        background-image: url('assets/img/image-header-desktop.jpg');
+        background-image: url('../img/image-header-desktop.jpg');
         background-size: cover;
         background-color: hsl(277, 49%, 53%);
         opacity: 0.55;
