--- a/assets/css-scss/style.css
+++ b/assets/css-scss/style.css
@@ -22,6 +22,11 @@ body {
   color: white;
   font-size: 15px;
   margin-top: 20px;
+  position: fixed;
+  left: 50%;
+  bottom: 15%;
+  -webkit-transform: translate(-50%, -15%);
+          transform: translate(-50%, -15%);
 }
 
 .attribution a {
@@ -30,10 +35,13 @@ body {
 
 .container {
   background-color: #1b1938;
-  width: 1200px;
+  width: 1300px;
   height: auto;
-  margin: auto;
-  margin-top: 10%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -89,7 +97,7 @@ body {
 }
 
 .flex-col {
-  padding-right: 40px;
+  padding-right: 60px;
   display: block;
 }
 
