--- a/assets/css-scss/_globals.scss
+++ b/assets/css-scss/_globals.scss
@@ -1,15 +1,11 @@
 @import 'variables';
 
 html{ 
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 *, *::before, *::after { box-sizing: inherit; }
 body{ 
     background-color: $very-dark-blue;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 50px;
-    padding-bottom: 50px;
 }
 
 .attribution { 
@@ -37,7 +33,7 @@ body{
     left: 50%;
     transform:translate(-50%,-50%);
     display: flex;
-    border-radius: 10px 0 10px 10px;
+    border-radius: 10px;
     
     &-col1, &-col2{
         flex: 1;
@@ -88,7 +84,6 @@ body{
         > p{
             font-family: 'Lexend Deca', sans-serif;
             color: $slightly-transparent-white-p;
-            // padding-top: 0;
             margin-top: 10px;
         }
         
@@ -103,17 +98,21 @@ body{
 
 
 @media (max-width: 375px){
+
+
+
+    .attribution{
+        display: none;
+    }
     .container{
-        width: 100%;
+        width: 90%;
         display: flex;
         flex-direction: column-reverse;
         border-radius: 10px;
-        overflow: hidden;
         height: 850px;
-
+        margin-top: 50px;
         &-col1{ 
             text-align: center;
-            // margin-left: 35px;
             width: 300px;
             height: 600px;
             > h1{
@@ -147,6 +146,7 @@ body{
         margin-left: 40px;
         &-col{
             padding-bottom: 30px;
+            margin-left:10%;
             > span{
                 font-size: 25px;
             }
